test/success/match/wildcard_only/main.sk
module Main {

fn main() {
    let v = match 2 {
        _ -> 2,
    };
    assert(v == 2);
}

}