test/errors/matchcompile/match_unify_missing_pattern/main.sk
module Main {

struct String {}

struct List[T] {}

enum Type {
    Named(String, List[Type]),
    Tuple(List[Type]),
    Ref(Type),
    Never,
}

fn main() {
    match (Never, Never) {
        (Named(n1, _), Named(n2, _)) -> 2,
    }
}

}